--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,18 @@ h1 {
     font-size: 72px;
 }
 
-p {
-    
+.subheader {
+    font-size: 36px;
+    margin: 16px 0 24px 0;
+}
+
+button {
+    background-color:#05c7cf;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    font-size: 24px;
+    cursor: pointer;
 }
 
 a {
@@ -49,4 +59,22 @@ ul {
 li {
     list-style-type: none;
     padding-left: 16px;
+}
+
+.row{
+    width: 100%;
+    max-width: 1300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#about {
+    padding: 48px 0;
+}
+
+h2 {
+    font-size: 60px;
+    text-align: center;
+    margin-bottom: 24px;
 }
